@@ -2237,7 +2237,6 @@ Dungeon NEW_ATTNAM;
           c = decoration(COUCH);
           d = EBONY_WOOD door;
           o = EBONY_WOOD wall(BRICK_FINE|WINDOW);
-	  C = coffin;
         }
       }
       {
@@ -2255,7 +2254,7 @@ Dungeon NEW_ATTNAM;
         #....$$___$$....#
         o.....$___$.....o
         #.....$___$.....#
-        #....C$___$.....#
+        #.....$___$.....#
         #.....$___$.....#
         o...............o
         ##.............##
@@ -2272,7 +2271,7 @@ Dungeon NEW_ATTNAM;
           # = 0;
           I = imperialist { Team = COLONIST_TEAM; Flags = IS_MASTER; }
           g = guard(ROOKIE) { Team = COLONIST_TEAM; }
-          f = femaleslave(NEW_ATTNAM);
+          f = punisher;
         }
       }
       {
