@@ -8,6 +8,10 @@
 -----------------------------------------------------------------------------
 July 23 2005 Heikki Sairanen <heikki.sairanen@gmail.com>
 
+  * punisher added	
+
+July 23 2005 Heikki Sairanen <heikki.sairanen@gmail.com>
+
   * coffin added	
 
 July 23 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>
